--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/algamoney_api?useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=123456
+
+spring.jackson.deserialization.fail-on-unknown-properties=true
