--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.username=postgres
 spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
-spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.date-format=dd-MM-yyyy
