--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=dd-MM-yyyy
+
+spring.profiles.active=oauth-security
