--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,6 @@
 algamoney.seguranca.enable-https=true
+algamoney.origin-permitida=https://algamoney-angular.herokuapp.com
+
+spring.datasource.url={PGDBC_DATABASE_URL}
+spring.datasource.username={PGDBC_DATABASE_USERNAME}
+spring.datasource.password={PGDBC_DATABASE_PASSWORD}
