configurando e enviando e-mail com template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=dd-MM-yyyy
+
+algamoney.mail.host=smtp.gmail.com
+algamoney.mail.port=587
+algamoney.mail.username=
+algamoney.mail.password=
