incluindo logs no agendamento do envio de e-mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ algamoney.mail.username=
 algamoney.mail.password=
 
 spring.profiles.active=oauth-security
+
+logging.level.com.algaworks.algamoney.api=DEBUG
