--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ spring.datasource.password=123456
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=dd-MM-yyyy
+spring.profiles.active=oauth-security
+
+logging.level.com.algaworks.algamoney.api=DEBUG
 
 algamoney.mail.host=smtp.gmail.com
 algamoney.mail.port=587
 algamoney.mail.username=
 algamoney.mail.password=
 
-spring.profiles.active=oauth-security
-
-logging.level.com.algaworks.algamoney.api=DEBUG
+algamoney.s3.access-key-id=
+algamoney.s3.secret-access-key=
