--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,14 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=dd-MM-yyyy
 spring.profiles.active=oauth-security
 
+spring.http.multipart.max-file-size=3MB
+
 logging.level.com.algaworks.algamoney.api=DEBUG
 
 algamoney.mail.host=smtp.gmail.com
 algamoney.mail.port=587
-algamoney.mail.username=
-algamoney.mail.password=
+algamoney.mail.username=focustic01
+algamoney.mail.password=Sistemas07#
 
-algamoney.s3.access-key-id=
-algamoney.s3.secret-access-key=
+algamoney.s3.access-key-id=AKIAJU56R36UHEHMAJ2A
+algamoney.s3.secret-access-key=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
