atualizando e removendo anexo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ logging.level.com.algaworks.algamoney.api=DEBUG
 
 algamoney.mail.host=smtp.gmail.com
 algamoney.mail.port=587
-algamoney.mail.username=focustic01
-algamoney.mail.password=Sistemas07#
+algamoney.mail.username=
+algamoney.mail.password=
 
-algamoney.s3.access-key-id=AKIAJU56R36UHEHMAJ2A
-algamoney.s3.secret-access-key=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
+algamoney.s3.access-key-id=
+algamoney.s3.secret-access-key=
