--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ logging.level.com.algaworks.algamoney.api=DEBUG
 
 algamoney.mail.host=smtp.gmail.com
 algamoney.mail.port=587
-algamoney.mail.username=
+algamoney.mail.username=usuario
 algamoney.mail.password=
 
 algamoney.s3.access-key-id=
